--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="price-inner-box2">
                 <div class="price-form-box">
                     <div class="form-wrap">
-                        <form action="">
+                        <form action="#">
                             <label for="fname">First Name</label>
                             <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
