added new alt "before and after"

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="inner-box1">
                             <h4>Prestasi dalam perang<br>
                                 melawan penuaan</h4>
-                            <img src="assets/i/Прямоугольник_4.png" alt="#">
+                            <img src="assets/i/Прямоугольник_4.png" alt="">
                             <p>Tanpa resiko<br>Tanpa efek samping</p>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                         <div class="inner-box4">
                             <h4>terobosan revolusioner
                                 melawan penuaan</h4>
-                            <img src="assets/i/Прямоугольник_4.png" alt="#">
+                            <img src="assets/i/Прямоугольник_4.png" alt="">
                             <p>Tanpa resiko<br>Tanpa efek samping</p>
                         </div>
                     </div>
@@ -126,25 +126,25 @@
     <article class="article-feedback">
         <div class="row">
             <div class="column">
-                <img src="assets/i/2-min.png" alt="#">
+                <img src="assets/i/2-min.png" alt="before and after">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Exercitationem laborum laudantium perferendis rem.
                     Dolor, error excepturi explicabo, illum iusto magni modi.</p>
             </div>
             <div class="column">
-                <img src="assets/i/3-min.png" alt="#">
+                <img src="assets/i/3-min.png" alt="before and after">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Exercitationem laborum laudantium perferendis rem.
                     Dolor, error excepturi explicabo, illum iusto magni modi.</p>
             </div>
             <div class="column">
-                <img src="assets/i/3-min.png" alt="#">
+                <img src="assets/i/3-min.png" alt="before and after">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Exercitationem laborum laudantium perferendis rem.
                     Dolor, error excepturi explicabo, illum iusto magni modi.</p>
             </div>
             <div class="column">
-                <img src="assets/i/1-min.png" alt="#">
+                <img src="assets/i/1-min.png" alt="before and after">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Exercitationem laborum laudantium perferendis rem.
                     Dolor, error excepturi explicabo, illum iusto magni modi.</p>
